# CETOmega-ProDetecto

./: .gitignore  README.md
CETOmega_ChecksPack/: README.md  reports_checks.json  run_checks.py  run_empirical_only.py
CETOmega_Combined_CI/: README_BADGE_SNIPPET.md
CETOmega_Complete_Bundle/: README_BUNDLE.md
CETOmega_Enhancement_Pack/: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README_TAGLINE.txt
CETOmega_Full_Professional/: Dockerfile  README.md  environment.yml  pyproject.toml  run_validation.py
CETOmega_Full_Professional/.github/workflows/: test_cosmo.yml  test_frg.yml  test_ringdown.yml
CETOmega_Full_Professional/Benchmarks/CausalBench/: compare_models.py  make_bench_plots.ipynb
CETOmega_Full_Professional/CoreModels/gravity/: kerr_modes_solver.py
CETOmega_Full_Professional/CoreModels/kernel/: K_inverse_pade.py
CETOmega_Full_Professional/CoreModels/quantum/: density_reconstruction.ipynb
CETOmega_Full_Professional/CoreModels/validation/: results_summary.ipynb
CETOmega_Full_Professional/DarkSectorBench/bayes/: infer_params_nuts.py
CETOmega_Full_Professional/DarkSectorBench/cosmo/: compute_Pk_z.py
CETOmega_Full_Professional/DarkSectorBench/lensing/: weak_lensing_analysis.ipynb
CETOmega_Full_Professional/DarkSectorBench/nbody/: simulate_dark_matter.ipynb
CETOmega_Full_Professional/FRG_CausalToolkit/: run_FRG_flow.py
CETOmega_Full_Professional/Observables/: make_maps.ipynb
CETOmega_Full_Professional/ValidationPkg/docs/: requirements.txt
CETOmega_Full_Professional/ValidationPkg/tests/: test_cosmo_class.py
(+80 files in other folders)
